Added initial styling.  Amount left is now factoring in the total expenses.

--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <title>Money Tracker</title>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{%  static 'web_app/style.css' %}">
 </head>
 <body>
 
-<div class="container">
-    <h4>Money Tracker</h4>
+<div class="container text-center">
+    <h1>Money Tracker</h1>
     {% block content %}
     {% endblock %}
 </div>
