--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -1,5 +1,5 @@
 {%  extends 'web_app/base.html' %}
 
 {% block content %}
-    <h2>index.html content</h2>
+    <h2 class="text-muted">Current amount left to spend this pay period: </h2><h1 class="text-dark">---{{ money_left }}---</h1>
 {%  endblock %}
