Added iphone icon

--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{%  static 'web_app/style.css' %}">
+    <link rel="apple-touch-icon" href="{% static 'web/budget.jpg' %}">
 </head>
 <body>
 
