Added color coding to show how expenses are tracking for pay period.

--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <div class="jumbotron">Money Tracker</div>
+    <div class="jumbotron"><h2>Money Tracker</h2></div>
     {% block content %}
     {% endblock %}
 </div>
