Added margins in the add expense category.

--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -22,7 +22,7 @@
                     <option class="dropdown-item" value="{{ value }}">{{ text }}</option>
                 {% endfor %}
             </select>
-                <input class="form-control" type="number" placeholder="Add New Expense AMOUNT" step="0.01" min="0" name="amount" required>
+                <input class="form-control mt-2 mb-2" type="number" placeholder="Add New Expense AMOUNT" step="0.01" min="0" name="amount" required>
                 <input class="btn btn-info form-control" type="submit" value="Add New Expense">
             </div>
         </div>
