--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -1,3 +1,10 @@
 body {
     font-family: 'Oswald', sans-serif;
 }
+
+
+.header{
+    font-family: 'Pacifico', cursive;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
