--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -7,6 +7,7 @@
     <title>Money Tracker</title>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{%  static 'web_app/style.css' %}">
     <link rel="apple-touch-icon" href="{% static 'web_app/budget.jpg' %}">
 </head>
@@ -20,7 +21,7 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <div class="jumbotron"><h2>Money Tracker</h2></div>
+    <div class="header"><h2>Money Tracker</h2></div>
     {% block content %}
     {% endblock %}
 </div>
