Added some new styling to the navbar and money jumbotron.

--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -5,6 +5,9 @@ body {
 
 .header{
     font-family: 'Pacifico', cursive;
-    margin-top: 2em;
-    margin-bottom: 2em;
+
+}
+
+.money-left{
+    margin-top: 4em;
 }
