--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -21,9 +21,11 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <div class="header"><h2>Money Tracker</h2></div>
+    <div class="header navbar fixed-top navbar-light bg-light"><h2>Money Tracker</h2></div>
+    <div class="container">
     {% block content %}
     {% endblock %}
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
