--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Oswald', sans-serif;
+    padding-top: 4em;
 }
 
 
@@ -8,6 +9,6 @@ body {
 
 }
 
-.money-left{
-    margin-top: 4em;
-}
+/*.money-left{*/
+    /*margin-top: 4em;*/
+/*}*/
