--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -21,7 +21,7 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <div class="header navbar fixed-top navbar-light bg-light"><h2>Money Tracker</h2></div>
+    <div class="header navbar fixed-top navbar-dark bg-info"><h2 class="text-white">Money Tracker</h2></div>
     <div class="container">
     {% block content %}
     {% endblock %}
