--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -23,7 +23,7 @@
                 {% endfor %}
             </select>
                 <input class="form-control mt-2 mb-2" type="number" placeholder="Add New Expense AMOUNT" step="0.01" min="0" name="amount" required>
-                <input class="btn btn-info form-control" type="submit" value="Add New Expense">
+                <input class="btn btn-success form-control" type="submit" value="Add New Expense">
             </div>
         </div>
     </form>
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-info form-control" type="submit" value="Update Expense">
+                        <input class="btn btn-success form-control" type="submit" value="Update Expense">
                          <a class="btn btn-danger form-control mt-1" href="{% url 'delete-expense' expense.pk %}" onclick="return confirm('Are you sure you want to delete this expense?');">Delete Expense</a>
                     </div>
 
