Added ability to add credit.

--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -54,5 +54,13 @@
             </li>
         {% endfor %}
     </ul>
+            <hr><br><br><br><hr>
+    <form method="post" action="{% url 'add-credit' %}">
+        {%  csrf_token %}
+                <input class="form-control mt-2 mb-2" type="number" placeholder="Add New Credit Amount" step="0.01" min="0" name="amount" required>
+                <input class="btn btn-secondary form-control" type="submit" value="Add New Credit">
+            </div>
+        </div>
+    </form>
 
 {%  endblock %}
