--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -25,7 +25,7 @@
                 <input class="form-control mt-2 mb-2" type="number" placeholder="Add New Expense AMOUNT" step="0.01" min="0" name="amount" required>
                 <input class="btn btn-success form-control" type="submit" value="Add New Expense">
             </div>
-        </div>
+{#        </div>#}
     </form>
     <br><br>
     <hr>
@@ -58,9 +58,7 @@
     <form method="post" action="{% url 'add-credit' %}">
         {%  csrf_token %}
                 <input class="form-control mt-2 mb-2" type="number" placeholder="Add New Credit Amount" step="0.01" min="0" name="amount" required>
-                <input class="btn btn-secondary form-control" type="submit" value="Add New Credit">
-            </div>
-        </div>
+                <input class="btn btn-secondary form-control mb-2" type="submit" value="Add New Credit">
     </form>
 
 {%  endblock %}
