Added pie chart for relative expenses.

--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{%  static 'web_app/style.css' %}">
     <link rel="apple-touch-icon" href="{% static 'web_app/budget.jpg' %}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </head>
 <body>
 
@@ -34,5 +35,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="{%  static 'web_app/checkForUpdate.js' %}"></script>
+<script src="{%  static 'web_app/pieCharts.js' %}"></script>
 </body>
 </html>
