--- a/web_app/templates/web_app/index.html
+++ b/web_app/templates/web_app/index.html
@@ -55,8 +55,9 @@
         {% endfor %}
     </ul>
             <hr><br><br>
+{#    <button id="myBtn">Open Modal</button>#}
+{#<div class="modal"><canvas class="modal-content" id="myChart" width="400" height="400"><span class="close">&times;</span></canvas></div>#}
 
-    <canvas id="myChart" width="400" height="400"></canvas>
 {#<script>#}
 {#var ctx = document.getElementById('myChart').getContext('2d');#}
 {#var myChart = new Chart(ctx, {#}
