--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Oswald', sans-serif;
-    padding-top: 4em;
+    padding-top: 6em;
 }
 
 
@@ -42,6 +42,8 @@ body {
   float: right;
   font-size: 28px;
   font-weight: bold;
+    margin-right: 1em;
+    margin-top: 1em;
 }
 
 .close:hover,
