--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -14,41 +14,80 @@ body {
 /*}*/
 
 /* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+/*.modal {*/
+  /*display: none; !* Hidden by default *!*/
+  /*position: fixed; !* Stay in place *!*/
+  /*z-index: 1; !* Sit on top *!*/
+  /*left: 0;*/
+  /*top: 0;*/
+  /*width: 100%; !* Full width *!*/
+  /*height: 100%; !* Full height *!*/
+  /*overflow: auto; !* Enable scroll if needed *!*/
+  /*background-color: rgb(0,0,0); !* Fallback color *!*/
+  /*background-color: rgba(0,0,0,0.4); !* Black w/ opacity *!*/
+/*}*/
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
+/*!* Modal Content/Box *!*/
+/*.modal-content {*/
+  /*background-color: #fefefe;*/
+  /*margin: 15% auto; !* 15% from the top and centered *!*/
+  /*padding: 20px;*/
+  /*border: 1px solid #888;*/
+  /*width: 80%; !* Could be more or less, depending on screen size *!*/
+/*}*/
 
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-    margin-right: 1em;
-    margin-top: 1em;
-}
+/*!* The Close Button *!*/
+/*.close {*/
+  /*color: #aaa;*/
+  /*float: right;*/
+  /*font-size: 28px;*/
+  /*font-weight: bold;*/
+    /*margin-right: 1em;*/
+    /*margin-top: 1em;*/
+/*}*/
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
+/*.close:hover,*/
+/*.close:focus {*/
+  /*color: black;*/
+  /*text-decoration: none;*/
+  /*cursor: pointer;*/
+/*}*/
+
+/*#myModal {*/
+  /*!*display: none; !* Hidden by default *!*!*/
+  /*position: fixed; !* Stay in place *!*/
+  /*z-index: 1; !* Sit on top *!*/
+  /*left: 0;*/
+  /*top: 0;*/
+  /*width: 100%; !* Full width *!*/
+  /*height: 100%; !* Full height *!*/
+  /*overflow: auto; !* Enable scroll if needed *!*/
+  /*background-color: rgb(0,0,0); !* Fallback color *!*/
+  /*background-color: rgba(0,0,0,0.4); !* Black w/ opacity *!*/
+/*}*/
+
+/*!* Modal Content/Box *!*/
+/*#myChart {*/
+  /*background-color: #fefefe;*/
+  /*margin: 15% auto; !* 15% from the top and centered *!*/
+  /*padding: 20px;*/
+  /*border: 1px solid #888;*/
+  /*width: 80%; !* Could be more or less, depending on screen size *!*/
+/*}*/
+
+/*!* The Close Button *!*/
+/*.close {*/
+  /*color: #aaa;*/
+  /*float: right;*/
+  /*font-size: 28px;*/
+  /*font-weight: bold;*/
+    /*margin-right: 1em;*/
+    /*margin-top: 1em;*/
+/*}*/
+
+/*.close:hover,*/
+/*.close:focus {*/
+  /*color: black;*/
+  /*text-decoration: none;*/
+  /*cursor: pointer;*/
+/*}*/
