Added animation to money balance number.

--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -91,3 +91,22 @@ body {
   /*text-decoration: none;*/
   /*cursor: pointer;*/
 /*}*/
+
+.cssanimation, .cssanimation span {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+.cssanimation span { display: inline-block }
+
+.leFlyInBottom span { animation-name: leFlyInBottom }
+@keyframes leFlyInBottom {
+    0% {
+        transform: translate(0px, 80px);
+        opacity: 0
+    }
+    50% {
+        transform: translate(10px, -50px);
+        animation-timing-function: ease-in-out
+    }
+}
