--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{%  static 'web_app/style.css' %}">
     <link rel="apple-touch-icon" href="{% static 'web_app/budget.jpg' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
 </head>
 <body>
 
@@ -45,5 +46,7 @@
 <script src="{%  static 'web_app/checkForUpdate.js' %}"></script>
 <script src="{%  static 'web_app/pieCharts.js' %}"></script>
 {#<script src="{% static 'web_app/progressChart.js' %}"></script>#}
+<script src="{%  static 'web_app/animation.js' %}"></script>
+
 </body>
 </html>
