--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -7,6 +7,7 @@ body {
 .header{
     font-family: 'Pacifico', cursive;
 
+
 }
 
 .expenses{
@@ -21,6 +22,10 @@ body {
     border-radius: 10px;
     box-shadow: 5px 10px 8px #17a2b8;
     margin-bottom: 25px;
+}
+
+ul li:nth-child(even){
+    background-color: #cecece;
 }
 /*.money-left{*/
     /*margin-top: 4em;*/
