--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 ul li:nth-child(even){
-    background-color: #cecece;
+    background-color: #fffff4;
 }
 /*.money-left{*/
     /*margin-top: 4em;*/
