--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -131,7 +131,7 @@ ul li:nth-child(even){
 
 .money-animation{
     animation-name: moneyLoad;
-    animation-duration: 2.5s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
 }
 
@@ -141,20 +141,25 @@ ul li:nth-child(even){
 
     }
 
-    80%{
+    50%{
         transform: translateX(10%) translateY(10%) rotate(-20deg);
     }
 
 
-    /*95%{*/
-        /*transform: rotate(-20deg)*/
-    /*}*/
-
-    /*98%{*/
-        /*transform: rotate(-10deg);*/
-    /*}*/
-
-    100%{
-        transform: translateX(0);
+    95%{
+        transform: translateX(0) rotate(5deg);
     }
+
+    98%{
+        transform: rotate(-3deg);
+    }
+
+    99%{
+        transform: rotate(1deg);
+    }
+
+}
+
+.money-left:hover{
+    transform: translateY(-3px);
 }
