Pushing a change to see if server picks it up.

--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -1,14 +1,16 @@
-{%  load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, content=minimal-ui" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, content=minimal-ui"/>
     <title>Money Tracker</title>
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{%  static 'web_app/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'web_app/style.css' %}">
     <link rel="apple-touch-icon" href="{% static 'web_app/budget.jpg' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
@@ -16,38 +18,48 @@
 <body>
 
 <div class="container text-center">
-    {%  if messages %}
+    {% if messages %}
         <ul class="list-group">
-            {%  for message in messages %}
+            {% for message in messages %}
                 <li class="list-group-item alert alert-success">{{ message }}</li>
             {% endfor %}
         </ul>
     {% endif %}
     {% if user.is_authenticated %}
-    <div class="header navbar fixed-top navbar-dark bg-info">
-        <h2 class="text-white">Money Tracker</h2>
+        <div class="header navbar fixed-top navbar-dark bg-info">
+            <h2 class="text-white">Money Tracker</h2>
             <button id="myBtn" class="chart-button">Expense Chart</button>
-        <div class="modal" id="myModal"><span class="close" id="pie-close">X</span><canvas class="modal-content" id="myChart" width="300" height="300"></canvas></div>
+            <div class="modal" id="myModal"><span class="close" id="pie-close">X</span>
+                <canvas class="modal-content" id="myChart" width="300" height="300"></canvas>
+            </div>
 
-        <button id="progressButton" class="chart-button">Expense Progress</button>
-        <div class="modal" id="progressModal"><span class="close" id="progress-close">X</span><canvas class="modal-content" id="progressChart" width="200" height="200"></canvas></div>
+            <button id="progressButton" class="chart-button">Expense Progress</button>
+            <div class="modal" id="progressModal"><span class="close" id="progress-close">X</span>
+                <canvas class="modal-content" id="progressChart" width="200" height="200"></canvas>
+            </div>
 
-    </div>
-    {%  endif %}
+        </div>
+    {% endif %}
     <div class="container">
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script src="{%  static 'web_app/checkForUpdate.js' %}"></script>
-<script src="{%  static 'web_app/pieCharts.js' %}"></script>
-<script src="{%  static 'web_app/animation.js' %}"></script>
+<script src="{% static 'web_app/checkForUpdate.js' %}"></script>
+<script src="{% static 'web_app/pieCharts.js' %}"></script>
+<script src="{% static 'web_app/animation.js' %}"></script>
 
 </body>
 </html>
