Added animation-fill-mode to moneyLoad animation

--- a/web_app/static/web_app/style.css
+++ b/web_app/static/web_app/style.css
@@ -141,6 +141,7 @@ ul li:nth-child(even){
     animation-duration: 2s;
     animation-delay: .5s;
     animation-timing-function: ease-in-out;
+    animation-fill-mode: backwards;
 }
 
 @keyframes moneyLoad{
