--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" type="text/css" href="{% static 'web_app/style.css' %}">
     <link rel="apple-touch-icon" href="{% static 'web_app/budget.jpg' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-
+    {% block extrahead %}
+    {% endblock %}
 </head>
 <body>
 
-<div class="container text-center">
+{% block nav %}
+    <div class="container text-center">
     {% if messages %}
         <ul class="list-group">
             {% for message in messages %}
@@ -40,10 +42,11 @@
 
         </div>
     {% endif %}
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
+{% endblock %}
+<div class="container">
+    {% block content %}
+    {% endblock %}
+</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
