--- a/web_app/templates/web_app/base.html
+++ b/web_app/templates/web_app/base.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, content=minimal-ui"/>
-    <title>Money Tracker</title>
+    {% block title %}
+        <title>Money Tracker</title>
+    {% endblock %}
     <link rel="stylesheet" type="text/css"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
